# Skunk

./: .gitattributes  .gitignore  CMakeLists.txt  Skunk.cna
asm/x64/: Loader.asm  ProxyCaller.asm
include/: Constexpr.h  Ldr.h  Macros.h  Ntdll.h  Skunk.h
scripts/: Linker.ld  extract.py
src/: Ldr.c  Skunk.c
